# dependency-graphics

./: .editorconfig  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml  pylint.yml
src/: __init__.py  main.py  run.py
src/configuration/: __init__.py  config.py  configuration.py  draw_config.py  factory.py
src/graphix/: __init__.py  draw.py  draw_with_graphviz.py
src/model/: __init__.py  modules.py
src/parser/: __init__.py  gradle_parser.py  parse.py
src/transformation/: __init__.py  transformation.py
tests/: .dependency-graphics-rc.yaml  __init__.py  test_main.py
tests/configuration/: .dependency-graphics-rc.yaml  01.yaml  02.yaml  test_configuration.py
tests/parser/: test_gradle_parser.py
tests/parser/project/module_2/: build.gradle
tests/resources/example_project/module_3/: build.gradle
tests/transformation/: test_transformation.py
