[project]
name = "dependency-graphics"
version = "0.0.1"
authors = [{name = "Jonas Huebner", email = "dev@jonashuebner.de" }]
description = "This tool generates visual dependency graphs based on source code"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"

dependencies = [
    'PyYAML ~= 6.0',
    'graphviz ~= 0.20.1'
]

[project.optional-dependencies]
tests = [
    'assertpy ~= 1.1',
    'mock ~= 5.1.0',
    'pytest ~=8.1.1'
]

[build-system]
requires = ["setuptools>=60.0.0"]
build-backend = "setuptools.build_meta"


