[metadata]
name = dependency-graphics
version = 0.0.1
author = Jonas Huebner
author_email = dev@jonashuebner.de
description = This tool generates visual dependency graphs based on source code
long_description = file: README.md
long_description_content_type = text/markdown
url = github.com/step-beyond/dependency-graphics
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:

[options.packages.find]
include = src
